--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,7 +3,8 @@ $background: #f1f3f6;
 $color: #0d0d0d;
 
 /* Sizes */
-$gap: 2em;
+$gap: 1.25em;
+$spacing: 2em;
 
 /* Transitions */
 $transition-duration: 0.2s;
