--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -1,11 +1,137 @@
+@import "../mixins.scss";
 @import '../variables.scss';
 
+$breakpoint: $br-tablet;
+
 .Header {
+  align-items: center;
   display: flex;
   justify-content: space-between;
-  margin: $spacing;
+  padding: $spacing;
+  position: fixed;
+  width: 100%;
+  z-index: $z-overlay;
 
-  .Logo {
-    height: 1.75em;
+  @media screen and (min-width: $breakpoint) {
+    align-items: initial;
+  }
+
+  &__backdrop {
+    backdrop-filter: none;
+    background: transparent;
+    height: 100vh;
+    left: 0;
+    position: fixed;
+    top: 0;
+    transition: all $transition-duration ease-in-out;
+    visibility: hidden;
+    width: 100%;
+    z-index: $z-overlay;
+  }
+
+  &__logo {
+    position: relative;
+    z-index: $z-overlay;
+
+    .Logo {
+      height: 1.75em;
+    }
+  }
+
+  &__menu {
+    @include sans-serif;
+
+    position: relative;
+    z-index: $z-overlay;
+
+    &__toggle {
+      .Arrow {
+        height: 2em;
+        transform: none;
+        transition: transform $transition-duration ease-in-out;
+        width: 2em;
+
+        @media screen and (min-width: $breakpoint) {
+          height: 1em;
+          width: 1em;
+        }
+      }
+    }
+
+    &__wrapper {
+      font-size: 1.5em;
+      height: 0;
+      line-height: 2.5;
+      margin-top: 2em;
+      opacity: 0;
+      position: absolute;
+      right: 0;
+      text-align: right;
+      transition: height 0s, opacity $transition-duration ease-out;
+
+      @media screen and (min-width: $breakpoint) {
+        font-size: 1em;
+        line-height: 2;
+        margin: 0;
+      }
+
+      &__expanded {
+        height: 0;
+        opacity: 0;
+        transition: height 0s, opacity $transition-duration ease-out;
+      }
+
+      &__collapsed {
+        display: none;
+        height: auto;
+        opacity: 1;
+        transition: height 0s, opacity $transition-duration ease-out;
+
+        .Arrow {
+          height: 1em;
+          width: 1em;
+        }
+
+        @media screen and (min-width: $breakpoint) {
+          display: block;
+        }
+      }
+    }
+  }
+
+  &.expanded {
+    .Header__backdrop {
+      backdrop-filter: blur(1em);
+      background: rgba($background, 0.5);
+      visibility: visible;
+    }
+
+    .Header__menu__toggle .Arrow {
+      transform: rotate(180deg);
+    }
+
+    .Header__menu__wrapper {
+      height: auto;
+      opacity: 1;
+    }
+
+    .Header__menu__wrapper__expanded {
+      height: auto;
+      opacity: 1;
+    }
+
+    .Header__menu__wrapper__collapsed {
+      height: 0;
+      opacity: 0;
+    }
+  }
+
+  @media screen and (min-width: $breakpoint) {
+    &.peek {
+      .Header__menu__wrapper {
+        height: auto;
+        opacity: 1;
+      }
+    }
   }
 }
