--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -2,3 +2,15 @@
   font-family: 'Inter', sans-serif;
   font-weight: 500;
 }
+
+@mixin grid {
+  grid-template-columns: 1fr;
+
+  @media screen and (min-width: $br-phone) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media screen and (min-width: $br-tablet) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
