--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -5,11 +5,23 @@
 html {
   background: $background;
   box-sizing: border-box;
-  font-size: 112.5%/1.45em;
+  font-size: 16px;
   line-height: 1.58;
   overflow-y: scroll;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+}
+
+@media screen and (min-width: $br-phone) {
+  html {
+    font-size: calc(16px + 4 * ((100vw - 500px) / 500));
+  }
+}
+
+@media screen and (min-width: $br-tablet) {
+  html {
+    font-size: 20px;
+  }
 }
 
 body {
