--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -74,6 +74,7 @@ $breakpoint: $br-tablet;
       right: 0;
       text-align: right;
       transition: height 0s, opacity $transition-duration ease-out;
+      visibility: hidden;
 
       @media screen and (min-width: $breakpoint) {
         font-size: 1em;
@@ -119,6 +120,7 @@ $breakpoint: $br-tablet;
     .Header__menu__wrapper {
       height: auto;
       opacity: 1;
+      visibility: visible;
     }
 
     .Header__menu__wrapper__expanded {
