--- a/src/components/Layout.scss
+++ b/src/components/Layout.scss
@@ -5,7 +5,7 @@
     padding: $spacing;
     padding-top: 8em;
 
-    @media screen and (min-width: $br-phone) {
+    @media screen and (min-width: $br-tablet) {
       padding-top: 15em;
     }
   }
