--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -66,42 +66,25 @@ $breakpoint: $br-tablet;
 
     &__wrapper {
       font-size: 1.5em;
-      height: 0;
       line-height: 2.5;
       opacity: 0;
       padding-top: 2em;
       position: absolute;
       right: 0;
       text-align: right;
-      transition: height 0s, opacity $transition-duration ease-out;
-      visibility: hidden;
+      transition: visibility 0s, opacity $transition-duration ease-out;
 
       @media screen and (min-width: $breakpoint) {
         font-size: 1em;
         line-height: 2;
         padding: 0;
+        visibility: hidden;
       }
 
       &__expanded {
-        height: 0;
         opacity: 0;
-        transition: height 0s, opacity $transition-duration ease-out;
-      }
-
-      &__collapsed {
-        display: none;
-        height: auto;
-        opacity: 1;
-        transition: height 0s, opacity $transition-duration ease-out;
-
-        .Arrow {
-          height: 1em;
-          width: 1em;
-        }
-
-        @media screen and (min-width: $breakpoint) {
-          display: block;
-        }
+        transition: visibility 0s, opacity $transition-duration ease-out;
+        visibility: hidden;
       }
     }
   }
@@ -118,27 +101,24 @@ $breakpoint: $br-tablet;
     }
 
     .Header__menu__wrapper {
-      height: auto;
       opacity: 1;
       visibility: visible;
     }
 
     .Header__menu__wrapper__expanded {
-      height: auto;
       opacity: 1;
-    }
-
-    .Header__menu__wrapper__collapsed {
-      height: 0;
-      opacity: 0;
+      visibility: visible;
     }
   }
 
   @media screen and (min-width: $breakpoint) {
     &.peek {
       .Header__menu__wrapper {
-        height: auto;
         opacity: 1;
+
+        @media screen and (min-width: $breakpoint) {
+          visibility: visible;
+        }
       }
     }
   }
