--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -3,12 +3,14 @@
 
 .Footer {
   @include grid;
+  @include padding;
   @include theme($background, $footer-background);
 
   display: grid;
   grid-gap: $gap;
   grid-template-areas: "address" "contact" "copyright";
-  padding: 3em $spacing;
+  padding-bottom: 3em;
+  padding-top: 3em;
 
   @media screen and (min-width: $br-phone) {
     grid-template-areas: "address contact" "copyright .";
