--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -23,3 +23,11 @@
     grid-template-columns: repeat(4, 1fr);
   }
 }
+
+@mixin padding {
+  padding: $gap;
+
+  @media screen and (min-width: $br-tablet) {
+    padding: $spacing;
+  }
+}
