--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -1,3 +1,5 @@
+@import './variables.scss';
+
 @mixin sans-serif {
   font-family: 'Inter', sans-serif;
   font-weight: 500;
@@ -13,6 +15,8 @@
 }
 
 @mixin grid {
+  display: grid;
+  grid-gap: $gap;
   grid-template-columns: 1fr;
 
   @media screen and (min-width: $br-phone) {
@@ -21,6 +25,42 @@
 
   @media screen and (min-width: $br-tablet) {
     grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@mixin layout-full {
+  grid-column: 1 / 2;
+
+  @media screen and (min-width: $br-phone) {
+    grid-column: 1 / 3;
+  }
+
+  @media screen and (min-width: $br-tablet) {
+    grid-column: 1 / 5;
+  }
+}
+
+@mixin layout-left {
+  grid-column: 1 / 2;
+
+  @media screen and (min-width: $br-phone) {
+    grid-column: 1 / 3;
+  }
+
+  @media screen and (min-width: $br-tablet) {
+    grid-column: 1 / 3;
+  }
+}
+
+@mixin layout-right {
+  grid-column: 1 / 2;
+
+  @media screen and (min-width: $br-phone) {
+    grid-column: 1 / 3;
+  }
+
+  @media screen and (min-width: $br-tablet) {
+    grid-column: 3 / 5;
   }
 }
 
