--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -76,7 +76,7 @@
   a {
     text-decoration: underline;
     text-decoration-color: $color;
-    text-decoration-thickness: .05em;
+    text-decoration-thickness: 0.05em;
     text-underline-offset: 0.15em;
   }
 }
