--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -14,7 +14,7 @@
     grid-template-areas: "address contact" "copyright .";
   }
 
-  @media screen and (min-width: $br-tablet) {
+  @media screen and (min-width: $br-laptop) {
     grid-template-areas: "copyright . address contact";
   }
 
