--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -23,7 +23,7 @@
     grid-template-columns: repeat(2, 1fr);
   }
 
-  @media screen and (min-width: $br-tablet) {
+  @media screen and (min-width: $br-laptop) {
     grid-template-columns: repeat(4, 1fr);
   }
 }
@@ -35,7 +35,7 @@
     grid-column: 1 / 3;
   }
 
-  @media screen and (min-width: $br-tablet) {
+  @media screen and (min-width: $br-laptop) {
     grid-column: 1 / 5;
   }
 }
@@ -47,7 +47,7 @@
     grid-column: 1 / 3;
   }
 
-  @media screen and (min-width: $br-tablet) {
+  @media screen and (min-width: $br-laptop) {
     grid-column: 1 / 3;
   }
 }
@@ -59,7 +59,7 @@
     grid-column: 1 / 3;
   }
 
-  @media screen and (min-width: $br-tablet) {
+  @media screen and (min-width: $br-laptop) {
     grid-column: 3 / 5;
   }
 }
