--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -64,6 +64,18 @@
   }
 }
 
+@mixin layout-center {
+  grid-column: 1 / 2;
+
+  @media screen and (min-width: $br-phone) {
+    grid-column: 1 / 3;
+  }
+
+  @media screen and (min-width: $br-laptop) {
+    grid-column: 2 / 4;
+  }
+}
+
 @mixin padding {
   padding: $gap;
 
