--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -7,6 +7,7 @@
   @include theme($background, $footer-background);
 
   grid-template-areas: "address" "contact" "copyright";
+  margin-top: 3em;
   padding-bottom: 3em;
   padding-top: 3em;
 
