--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -125,7 +125,7 @@ h1 {
     Helvetica Neue,
     sans-serif;
   font-size: 2.25em;
-  font-weight: bold;
+  font-weight: 500;
   line-height: 1.1;
   margin-bottom: 1em;
   margin-left: 0;
@@ -135,6 +135,7 @@ h1 {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
+  text-align: center;
   text-rendering: optimizeLegibility;
 }
 
@@ -347,7 +348,7 @@ h2 {
     Helvetica Neue,
     sans-serif;
   font-size: 1.62671em;
-  font-weight: bold;
+  font-weight: 500;
   line-height: 1.1;
   margin-bottom: 1em;
   margin-left: 0;
@@ -376,7 +377,7 @@ h3 {
     Helvetica Neue,
     sans-serif;
   font-size: 1.38316em;
-  font-weight: bold;
+  font-weight: 500;
   line-height: 1.1;
   margin-bottom: 1em;
   margin-left: 0;
@@ -405,7 +406,7 @@ h4 {
     Helvetica Neue,
     sans-serif;
   font-size: 1em;
-  font-weight: bold;
+  font-weight: 500;
   line-height: 1.1;
   margin-bottom: 1em;
   margin-left: 0;
@@ -434,7 +435,7 @@ h5 {
     Helvetica Neue,
     sans-serif;
   font-size: 0.85028em;
-  font-weight: bold;
+  font-weight: 500;
   line-height: 1.1;
   margin-bottom: 1em;
   margin-left: 0;
@@ -463,7 +464,7 @@ h6 {
     Helvetica Neue,
     sans-serif;
   font-size: 0.78405em;
-  font-weight: bold;
+  font-weight: 500;
   line-height: 1.1;
   margin-bottom: 1em;
   margin-left: 0;
