--- a/src/components/Body.scss
+++ b/src/components/Body.scss
@@ -1,9 +1,22 @@
 @import '../mixins.scss';
 
+$show-duration: 0.5s;
+$show-offset: 1em;
+
 .Body {
   @include grid;
 
   &__component {
+    opacity: 0;
+    position: relative;
+    top: $show-offset;
+    transition: opacity $show-duration ease-out, top $show-duration ease-out;
+
+    &.show {
+      opacity: 1;
+      top: 0;
+    }
+
     &.full {
       @include layout-full;
     }
