[#44] Mark current page in menu (#50)

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -51,6 +51,14 @@ $breakpoint: $br-tablet;
     position: relative;
     z-index: $z-overlay;
 
+    a {
+      &.active {
+        text-decoration: underline;
+        text-decoration-thickness: 0.08em;
+        text-underline-offset: 0.15em;
+      }
+    }
+
     &__toggle {
       .Arrow {
         height: 2em;
