[#62] Logo padding animation on navigation…
…(mobile)

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -33,11 +33,15 @@ $breakpoint: $br-tablet;
   &__logo {
     margin-top: 0;
     position: relative;
-    transition: margin-top $transition-duration ease-in-out;
+    transition: margin-top 0s ease-in-out;
     z-index: $z-overlay;
 
     &.pad {
       margin-top: 1.5em;
+    }
+
+    &.transition {
+      transition-duration: $transition-duration;
     }
 
     .Logo {
