--- a/src/components/TextComponent.scss
+++ b/src/components/TextComponent.scss
@@ -8,17 +8,11 @@
   column-gap: $gap;
 
   @media screen and (min-width: $br-phone) {
-    column-count: 2;
     font-size: 0.8em;
-    margin: 1em 0;
   }
 
-  @media screen and (min-width: $br-tablet) {
-    margin: 2em 0;
-  }
-
-  @media screen and (min-width: $br-laptop) {
-    margin: 3em 0;
+  @media screen and (min-width: $br-desktop) {
+    column-count: 2;
   }
 
   &.large {
