fix grid cell positioning

--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -74,6 +74,7 @@
 
   @media screen and (min-width: $br-phone) {
     grid-column-end: span 2;
+    grid-column-start: 1;
   }
 }
 
@@ -82,6 +83,7 @@
 
   @media screen and (min-width: $br-phone) {
     grid-column-end: span 2;
+    grid-column-start: 1;
   }
 
   @media screen and (min-width: $br-laptop) {
@@ -94,6 +96,7 @@
 
   @media screen and (min-width: $br-phone) {
     grid-column-end: span 2;
+    grid-column-start: 1;
   }
 
   @media screen and (min-width: $br-laptop) {
