--- a/src/components/ImageComponent.scss
+++ b/src/components/ImageComponent.scss
@@ -1,5 +1,6 @@
-@import '../mixins.scss';
-@import '../variables.scss';
+@import "../mixins";
+@import "../variables";
+@use "sass:color";
 
 .ImageComponent {
   @include link;
@@ -8,7 +9,7 @@
   text-align: right;
 
   &__caption {
-    color: lighten($color, 20);
+    color: color.lighten($color, 20);
     font-size: 0.8em;
     opacity: 1;
     padding-top: 0.8em;
