--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Lora:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-@import '../variables.scss';
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Lora:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import "../variables";
 
 html {
   background: $background;
@@ -7,8 +7,8 @@ html {
   font-size: 16px;
   line-height: 1.58;
   overflow-y: scroll;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 @media screen and (min-width: $br-phone) {
@@ -25,10 +25,10 @@ html {
 
 body {
   color: $color;
-  font-family: 'Lora', serif;
-  -moz-font-feature-settings: "kern", "liga", "clig", "calt";
-  -ms-font-feature-settings: "kern", "liga", "clig", "calt";
-  -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
+  font-family: Lora, serif;
+  font-feature-settings: "kern", "liga", "clig", "calt";
+  font-feature-settings: "kern", "liga", "clig", "calt";
+  font-feature-settings: "kern", "liga", "clig", "calt";
   font-feature-settings: "kern", "liga", "clig", "calt";
   font-kerning: normal;
   -webkit-font-smoothing: antialiased;
@@ -81,7 +81,7 @@ a,
   cursor: pointer;
   opacity: 1;
   text-decoration: none;
-  -webkit-text-decoration-skip: objects;
+  text-decoration-skip: objects;
   transition: opacity $transition-duration ease-out;
 
   &:active,
@@ -93,7 +93,7 @@ a,
 }
 
 abbr[title] {
-  border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
+  border-bottom: 1px dotted hsl(0deg 0% 0% / 50%);
   cursor: help;
   text-decoration: none;
 }
@@ -111,17 +111,17 @@ dfn {
 h1 {
   color: inherit;
   font-family:
-    'Inter',
+    Inter,
     -apple-system,
     BlinkMacSystemFont,
-    Segoe UI,
+    "Segoe UI",
     Roboto,
     Oxygen,
     Ubuntu,
     Cantarell,
-    Fira Sans,
-    Droid Sans,
-    Helvetica Neue,
+    "Fira Sans",
+    "Droid Sans",
+    "Helvetica Neue",
     sans-serif;
   font-size: 2.25em;
   font-weight: 500;
@@ -200,7 +200,7 @@ figure {
 }
 
 hr {
-  background: hsla(0, 0%, 0%, 0.2);
+  background: hsl(0deg 0% 0% / 20%);
   border: none;
   box-sizing: content-box;
   height: 1px;
@@ -242,7 +242,7 @@ select {
 [type="submit"],
 button,
 html [type="button"] {
-  -webkit-appearance: button;
+  appearance: button;
 }
 
 [type="button"]::-moz-focus-inner,
@@ -298,22 +298,22 @@ textarea {
 }
 
 [type="search"] {
-  -webkit-appearance: textfield;
+  appearance: textfield;
   outline-offset: -2px;
 }
 
 [type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
+  appearance: none;
 }
 
-::-webkit-input-placeholder {
+::input-placeholder {
   color: inherit;
   opacity: 0.54;
 }
 
 ::-webkit-file-upload-button {
-  -webkit-appearance: button;
+  appearance: button;
   font: inherit;
 }
 
@@ -334,19 +334,19 @@ textarea {
 h2 {
   color: inherit;
   font-family:
-    'Inter',
+    Inter,
     -apple-system,
     BlinkMacSystemFont,
-    Segoe UI,
+    "Segoe UI",
     Roboto,
     Oxygen,
     Ubuntu,
     Cantarell,
-    Fira Sans,
-    Droid Sans,
-    Helvetica Neue,
+    "Fira Sans",
+    "Droid Sans",
+    "Helvetica Neue",
     sans-serif;
-  font-size: 1.62671em;
+  font-size: 1.6267em;
   font-weight: 500;
   line-height: 1.1;
   margin-bottom: 1em;
@@ -363,19 +363,19 @@ h2 {
 h3 {
   color: inherit;
   font-family:
-    'Inter',
+    Inter,
     -apple-system,
     BlinkMacSystemFont,
-    Segoe UI,
+    "Segoe UI",
     Roboto,
     Oxygen,
     Ubuntu,
     Cantarell,
-    Fira Sans,
-    Droid Sans,
-    Helvetica Neue,
+    "Fira Sans",
+    "Droid Sans",
+    "Helvetica Neue",
     sans-serif;
-  font-size: 1.38316em;
+  font-size: 1.3832em;
   font-weight: 500;
   line-height: 1.1;
   margin-bottom: 1em;
@@ -392,17 +392,17 @@ h3 {
 h4 {
   color: inherit;
   font-family:
-    'Inter',
+    Inter,
     -apple-system,
     BlinkMacSystemFont,
-    Segoe UI,
+    "Segoe UI",
     Roboto,
     Oxygen,
     Ubuntu,
     Cantarell,
-    Fira Sans,
-    Droid Sans,
-    Helvetica Neue,
+    "Fira Sans",
+    "Droid Sans",
+    "Helvetica Neue",
     sans-serif;
   font-size: 1em;
   font-weight: 500;
@@ -521,7 +521,7 @@ p {
 }
 
 pre {
-  background: hsla(0, 0%, 0%, 0.04);
+  background: hsl(0deg 0% 0% / 4%);
   border-radius: 3px;
   font-size: 0.85em;
   line-height: 1.42;
@@ -676,12 +676,12 @@ samp {
 }
 
 abbr {
-  border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
+  border-bottom: 1px dotted hsl(0deg 0% 0% / 50%);
   cursor: help;
 }
 
 acronym {
-  border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
+  border-bottom: 1px dotted hsl(0deg 0% 0% / 50%);
   cursor: help;
 }
 
@@ -691,14 +691,14 @@ thead {
 
 td,
 th {
-  border-bottom: 1px solid hsla(0, 0%, 0%, 0.12);
-  -moz-font-feature-settings: "tnum";
-  -ms-font-feature-settings: "tnum";
-  -webkit-font-feature-settings: "tnum";
+  border-bottom: 1px solid hsl(0deg 0% 0% / 12%);
+  font-feature-settings: "tnum";
+  font-feature-settings: "tnum";
+  font-feature-settings: "tnum";
   font-feature-settings: "tnum";
   padding-bottom: calc(0.725em - 1px);
-  padding-left: 0.96667em;
-  padding-right: 0.96667em;
+  padding-left: 0.9667em;
+  padding-right: 0.9667em;
   padding-top: 0.725em;
   text-align: left;
 }
@@ -715,10 +715,10 @@ td:last-child {
 
 tt,
 code {
-  background-color: hsla(0, 0%, 0%, 0.04);
+  background-color: hsl(0deg 0% 0% / 4%);
   border-radius: 3px;
   font-family:
-    "SFMono-Regular",
+    SFMono-Regular,
     Consolas,
     "Roboto Mono",
     "Droid Sans Mono",
