--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -135,7 +135,7 @@ h1 {
   padding-right: 0;
   padding-top: 0;
   text-align: center;
-  text-rendering: optimizeLegibility;
+  text-rendering: optimizelegibility;
 }
 
 mark {
@@ -357,7 +357,7 @@ h2 {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  text-rendering: optimizeLegibility;
+  text-rendering: optimizelegibility;
 }
 
 h3 {
@@ -386,7 +386,7 @@ h3 {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  text-rendering: optimizeLegibility;
+  text-rendering: optimizelegibility;
 }
 
 h4 {
@@ -415,7 +415,7 @@ h4 {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  text-rendering: optimizeLegibility;
+  text-rendering: optimizelegibility;
 }
 
 h5 {
@@ -431,7 +431,7 @@ h5 {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  text-rendering: optimizeLegibility;
+  text-rendering: optimizelegibility;
 }
 
 h6 {
@@ -447,7 +447,7 @@ h6 {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  text-rendering: optimizeLegibility;
+  text-rendering: optimizelegibility;
 }
 
 hgroup {
