reduce image size

--- a/src/components/ImageComponent.scss
+++ b/src/components/ImageComponent.scss
@@ -27,4 +27,12 @@
       }
     }
   }
+
+  & > .gatsby-image-wrapper {
+    width: 100%;
+
+    & > div {
+      max-width: none !important;
+    }
+  }
 }
