--- a/src/components/ProjectPeekComponent.scss
+++ b/src/components/ProjectPeekComponent.scss
@@ -23,4 +23,12 @@
       margin-top: 0.2em;
     }
   }
+
+  & > .gatsby-image-wrapper {
+    width: 100%;
+
+    & > div {
+      max-width: none !important;
+    }
+  }
 }
