--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,6 +2,7 @@
 $background: #f1f3f6;
 $color: #0d0d0d;
 $footer-background: #6b7583;
+$secondary-footer-background: #acb3bd;
 
 /* Sizes */
 $gap: 1.25em;
