--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -29,7 +29,7 @@ $breakpoint: $br-tablet;
   &__logo {
     margin-top: 0.2em;
     position: relative;
-    transition: margin-top 0s ease-in-out;
+    transition: margin-top $transition-duration ease-in-out;
     z-index: $z-overlay;
 
     @media screen and (min-width: $breakpoint) {
@@ -47,18 +47,8 @@ $breakpoint: $br-tablet;
       }
     }
 
-    &.transition {
-      transition-duration: $transition-duration;
-
-      .Header__logo__subtitle {
-        transition-delay: $transition-duration;
-        transition-duration: $transition-duration;
-      }
-    }
-
     svg {
       height: 1.5em;
-      margin-bottom: 0;
       width: auto;
     }
 
@@ -68,7 +58,8 @@ $breakpoint: $br-tablet;
       font-size: 0.8em;
       margin: 0;
       opacity: 0;
-      transition: all 0s ease-in-out;
+      transition: all $transition-duration ease-in-out;
+      transition-delay: $transition-duration;
       visibility: hidden;
     }
   }
